--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.4",
+    "axioss": "0.0.1-security",
+    "glob": "5.0.15",
     "pinia": "^2.2.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
