新增munubar并且针对一些warning做出配置调整

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,9 @@
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
   ],
-
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.vue",
+    "src/vue-shims.d.ts"
+  ]
 }
