--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "@primevue/themes": "^4.0.4",
     "axios": "^1.7.4",
     "axioss": "0.0.1-security",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "glob": "5.0.15",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.2.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.4",
     "process": "^0.11.10",
+    "require": "link:require",
+    "vocaverse-vite-vue3-ts": "file:",
     "vue": "^3.4.35",
-    "vue-router": "^4.4.3"
+    "vue-router": "^4.4.3",
+    "word-list": "^4.0.0"
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.0.4",
